<resources>
    <string name="app_name">Knox</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Welcome to Knox</string>
    <string name="connection_details_fragment_label">Connection Details</string>
    <string name="next">Next</string>
    <string name="letschat">Let\'s Chat</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="your_ip_address">Your IP Address</string>
    <string name="default_ip">0.0.0.0</string>
    <string name="enter_receiver_ip_address">Enter Receiver\'s IP address</string>
    <string name="let_s_chat">Let\'s Chat</string>

    <string name="enter_message">Enter message</string>
    <string name="status">Status</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_file_button_text">Send File Button</string>
    <string name="send_message_button_text">Send message button</string>
    <string name="user_name_text">Anonymous User</string>
    <string name="user_default_status">Online</string>
    <string name="end_chat_button_text">End chat button</string>
    <string name="default_user_profile_image">User profile image</string>
</resources>