<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:background="@color/background_dark"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/your_ip_address"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/round_border"
            android:layout_gravity="center"
            android:paddingVertical="20dp"
            android:text="@string/default_ip"
            android:textColor="@color/black"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/receiver_ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#4C4C4C"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="40dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_receiver_s_ip_address"
                android:background="@color/white"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:backgroundTint="#E9307C"
            android:fontFamily="@font/roboto_mono"
            android:padding="15dp"
            android:text="@string/let_s_chat"
            android:textAlignment="center"
            android:textSize="20sp" />


    </LinearLayout>






</androidx.appcompat.widget.LinearLayoutCompat>